<package format="3">
  <name>drone_sensors</name>
  <version>1.0.0</version>
  <description>드론 센서 통합 launch 패키지</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <exec_depend>respeaker</exec_depend>
  <exec_depend>thl100_sensor</exec_depend>
  <exec_depend>wcm6800_sensor</exec_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

