<package format="3">
  <name>wcm6800_sensor</name>
  <version>1.0.0</version>
  <description>Winson WCM6800 전류계 UART ROS2 노드</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
